src/objects/ANZDeptProject__c.object
<CustomObject>
    <description>Used to calculate &quot;Business Development Timesheet Allocation and New Task Setup Instruction&quot;</description>
    <fields>
        <fullName>AECOM_Department__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AECOM Department</label>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>ANZDeptProject</relationshipLabel>
        <relationshipName>ANZDeptProject</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailRecipient3__c</fullName>
        <description>This is the person that needs to be informed to create task in oracle</description>
        <label>EmailRecipient3</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KeyClient__c</fullName>
        <label>KeyClient</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OracleProjectName__c</fullName>
        <label>OracleProjectName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectNo__c</fullName>
        <label>OracleProjectNo</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ANZDeptProject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AECOM_Department__c</columns>
        <columns>EmailRecipient3__c</columns>
        <columns>KeyClient__c</columns>
        <columns>OracleProjectName__c</columns>
        <columns>OracleProjectNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AECOM_Department__c</field>
            <operation>equals</operation>
            <value>Brisbane-ENE - Generation</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Perth</fullName>
        <columns>NAME</columns>
        <columns>AECOM_Department__c</columns>
        <columns>EmailRecipient3__c</columns>
        <columns>KeyClient__c</columns>
        <columns>OracleProjectName__c</columns>
        <columns>OracleProjectNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AECOM_Department__c</field>
            <operation>contains</operation>
            <value>Perth</value>
        </filters>
        <label>All Perth</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FINDER</fullName>
        <columns>NAME</columns>
        <columns>AECOM_Department__c</columns>
        <columns>EmailRecipient3__c</columns>
        <columns>KeyClient__c</columns>
        <columns>OracleProjectName__c</columns>
        <columns>OracleProjectNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OracleProjectName__c</field>
            <operation>contains</operation>
            <value>WIS-BNE-BD</value>
        </filters>
        <label>FINDER</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ANZDeptProjectId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANZDeptProject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>